# splc

./: .gitignore  .gitmodules  README.md  splc.cabal  stack.yaml
src/: Lexer.hs  Parser.hs  Types.hs
test/: LexerSpec.hs
