name:                splc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/twesterhout/splc#readme
license:             MIT
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          kot.tom97@gmail.com
copyright:           (c) 2018 Tom Westerhout
category:            Unclassified
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable splc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
