name:                splc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/twesterhout/splc#readme
license:             MIT
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          kot.tom97@gmail.com
copyright:           (c) 2018 Tom Westerhout
category:            Unclassified
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
  build-depends:       base >= 4.7 && < 5
                     , deepseq
                     , semigroups
                     , text
                     , transformers
                     , pipes
                     , megaparsec
  ghc-options:         -O2 -Wall -fprof-auto -fprof-cafs
  default-language:    Haskell2010

executable splc
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , splc
  default-language:    Haskell2010

test-suite splc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LexerSpec
  build-depends:       base >= 4.7 && < 5
                     , splc
                     , hspec
                     , hspec-discover
  default-language:    Haskell2010
